/*
 * This file was generated by the Gradle "init" task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.7/userguide/building_java_projects.html in the Gradle documentation.
 */

apply plugin: "java"
apply plugin: "application"
apply plugin : "jacoco"

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    gradlePluginPortal()

}

ext {
    projectlombokVersion = "1.18.34"
    jsonwebtokenVersion = "0.12.6"
    logbackVersion = "1.5.11"
    jacksonVersion = "2.17.1"
    springbootVersion = "6.0.23"
    jettyVersion = "11.0.24"
    poiVersion = "5.3.0"
}

dependencies {
    // Lombok annotations
    compileOnly "org.projectlombok:lombok:$projectlombokVersion"
    annotationProcessor "org.projectlombok:lombok:$projectlombokVersion"

    // Test dependencies
    testImplementation "com.github.tomakehurst:wiremock-jre8:3.0.1" // dates 08/2023 . migrated to org.wiremock:wiremock
    testImplementation "org.mockito:mockito-core:5.12.0"
//    testImplementation "junit:junit:4.13.2" //migrated to org.junit.jupiter:junit-jupiter-api
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.junit.jupiter:junit-jupiter-api:5.11.0-M2"
    runtimeOnly "org.junit.jupiter:junit-jupiter-engine:5.11.0-M2"

    // JWT dependencies
    // autonomousapp : dependency check flags it as unused.
    // implementation "io.jsonwebtoken:jjwt:0.12.6"  // migrated to io.jsonwebtoken:jjwt-api
    // autonomousapp : dependency check flags it as unused.
    // implementation "io.jsonwebtoken:jjwt-api:0.12.6"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:$jsonwebtokenVersion"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jsonwebtokenVersion"

    // Various dependencies
    implementation "ch.qos.logback:logback-classic:$logbackVersion"
    implementation "ch.qos.logback:logback-core:$logbackVersion"
    // autonomousapp : dependency check flags it as unused.
    // implementation "commons-codec:commons-codec:1.17.1"
    // autonomousapp : dependency check flags it as unused.
    // implementation "com.clumd.projects:java-json:1.2.1"
    // autonomousapp : dependency check flags it as unused.
    // implementation "com.fasterxml.jackson.core:jackson-annotations:2.17.1"
    implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
    // autonomousapp : dependency check flags it as unused.
    // implementation "com.google.code.gson:gson:2.11.0"
    implementation "com.google.guava:guava:33.3.1-jre"
    implementation "com.jcraft:jsch:0.1.55"   // dates from 2018, needs update=. ssh. migrated to com.github.mwiede:jsch
    // autonomousapp : dependency check flags it as unused.
    // implementation "com.neuronrobotics:nrjavaserial:5.2.1"   // last update 05/2020. error in import org.apache.commons.net.util.SubnetUtils;
    // autonomousapp : dependency check flags it as unused.
    // implementation "com.sun.jna:jna:3.0.9"   // dates from 2010, needs updating. access to native shared libraries : migrated to "net.java.dev.jna:jna:3.0.9"
    // autonomousapp : dependency check flags it as unused.
    // implementation "io.micrometer:micrometer-commons:1.13.6"
    runtimeOnly "io.micrometer:micrometer-observation:1.13.6"
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.apache.commons:commons-lang3:3.17.0"
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.apache.httpcomponents:fluent-hc:4.5.14" // last update 11/2022
    implementation "org.apache.commons:commons-math3:3.6.1"
    implementation "org.apache.httpcomponents:httpclient:4.5.14" // last update 11/2022
    implementation "org.apache.httpcomponents:httpcore:4.4.16"
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.apache.directory.studio:org.apache.httpcomponents.httpcore:4.1.2"  // last updated 02/2012

    implementation "org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5"  //last updated 07/2020
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.json:json:20240303"
    compileOnly "org.jetbrains:annotations:24.1.0"
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.lightcouch:lightcouch:0.2.0"  // last update 11/2017
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.mindrot:jbcrypt:0.4"  // psswd hashing, last update 02/2017
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.mongodb:bson:5.1.1"
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.mongodb:mongo-java-driver:3.12.14"  // dates 06/2023. latest version 5.2.0. migrated to org.mongodb:mongodb-driver-sync
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.netbeans.external:org-apache-commons-logging:RELEASE230"
    implementation "org.springframework:spring-messaging:$springbootVersion"  // ok up to  6.1.2, but 6.0.23 less vulns
    implementation "org.springframework:spring-websocket:$springbootVersion"
    implementation "org.springframework:spring-context:$springbootVersion"
    implementation "org.springframework:spring-core:$springbootVersion"
    implementation "org.springframework:spring-web:$springbootVersion"

    implementation "org.slf4j:slf4j-api:1.7.32"   // last update 02/2022


    // Use Jetty WebSocket dependencies
    implementation "org.eclipse.jetty:jetty-util:$jettyVersion"
    implementation "org.eclipse.jetty:jetty-http:$jettyVersion"
    implementation "org.eclipse.jetty:jetty-io:$jettyVersion"
    implementation "org.eclipse.jetty:jetty-server:$jettyVersion"
    implementation "org.eclipse.jetty:jetty-servlet:$jettyVersion"  // upper versions migrated to org.eclipse.jetty.ee10
    implementation "org.eclipse.jetty:jetty-client:$jettyVersion"
    implementation "org.eclipse.jetty.websocket:websocket-jakarta-server:$jettyVersion"   // not 12.x versions?
    implementation "org.eclipse.jetty.websocket:websocket-jetty-server:$jettyVersion"   // not 12.x versions?
    implementation "org.eclipse.jetty.websocket:websocket-jetty-api:$jettyVersion"
    implementation "org.eclipse.jetty.toolchain:jetty-jakarta-servlet-api:5.0.2"
    implementation "org.eclipse.jetty.toolchain:jetty-jakarta-websocket-api:2.0.0"

//    implementation "org.eclipse.jetty.websocket:websocket-jakarta-client:11.0.24"
//    implementation "org.eclipse.jetty.websocket:websocket-core-client:11.0.24"
//    implementation "org.eclipse.jetty.websocket:websocket-servlet:11.0.24"
//    implementation "org.eclipse.jetty.websocket:websocket-jetty-client:11.0.24"

    implementation "jakarta.websocket:jakarta.websocket-api:2.0.0" // Updated for Jakarta EE

    // logs
    implementation "net.logstash.logback:logstash-logback-encoder:8.0"

    // excel reading/parsing
    implementation "org.apache.poi:poi:$poiVersion" // For .xls files (HSSF)
    implementation "org.apache.poi:poi-ooxml:$poiVersion" // For .xlsx files (XSSF)
//    implementation "org.apache.poi:poi-ooxml-schemas:5.2.3"
    runtimeOnly "org.apache.poi:poi-scratchpad:$poiVersion" // For additional formats (optional)
    // autonomousapp : dependency check flags it as unused.
    // implementation "org.apache.commons:commons-collections4:4.5.0-M2" // Latest
    implementation "commons-io:commons-io:2.16.1"

    // autonomousapp : dependency check flags it as unused.
    // implementation "commons-net:commons-net:3.9.0"
}

sourceSets{
    main{
        java{
            srcDirs "lib/unpacked"
        }
    }
}
task buildAndRun {
    dependsOn "build" // Ensures "build" task is executed first

    doLast {
        // Run the Java application

    }
}


// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    sourceCompatibility = "17"
    targetCompatibility = "17"

}

//tasks.withType(JavaCompile) {
//    options.compilerArgs << "-Xlint:deprecation" // Add the -Xlint flag to the compiler arguments
//}

run{
    systemProperty "logback.configurationFile", "./src/main/resources/logback.xml"
    systemProperty "javax.net.ssl.trustStore", "./cacerts.jks"
    systemProperty "javax.net.ssl.trustStorePassword", "changeit"

//    jvmArgs = ["-Xlint:deprecation"]
}

test{
    useJUnitPlatform()
    onlyIf {
        !project.hasProperty("test.skip") || !project.getProperty("test.skip").toBoolean()
    }
}
jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir("jacocoHtml")
    }
}

task printEnvVariables {
    doLast {
        println "JAVA_HOME: ${System.getenv("JAVA_HOME")}"
    }
}
